# job_test

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: dashboard.py  data.py  dimensions.py  files.py  sop.py  tables.py
app/core/: config.py  database.py  minio_client.py
app/models/: __init__.py  base.py  dashboard.py  data_source.py  dimensions.py  sop.py
app/schemas/: __init__.py  base.py  dashboard.py  data.py  sop.py
app/services/: dashboard.py  data.py  dimensions.py  sop.py  tables.py
docker/clickhouse/: config.xml  users.xml
migrations/: env.py
